	  though msconn returned.  The USB MSC logic really should not use
	  a pthread, but we are stuck with that for now.  The work-around
	  is the msconn now daemonizes itself so that it so that the pthread
	  is created in a different task group (2013-9-7).
	* apps/system/usbmonitor:  The USB monitor has been extended so
	  that it can be used with USB device or host trace data (2013-9-9).
	* apps/nshlib/nsh_fscmds.c:  Fix NSH listing output for the case
	  of a single file.  Provided by Lorenz Meier (2013-9-13).

6.31 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/nshlib/nsh_netcmds.c:  Remove a warning when DHCP is not
	  enabled (2013-9-17).
	* apps/nshlib/Kconfig:  Default IP address should be 0x0a000001
	  (10.0.0.1), not 0xa0000001 (160.0.0.1).  Ditto for the gateway
	  (2013-9017).
	* apps/examples/ostest/Kconfig:  Add configuration options for
	  the FPU test.  There are still many OS test configuration
	  optionst that do not appear in Kconfig (2013-9-18).
	* apps/examples/cc3000:  Condition the CC3000 example on having
	  selected the CC3000 device.  Otherwise, you are prompted for
	  this the CC3000 option on each 'make oldconfig' (2013-9-18).
	* apps/system/usbmonitor/usbmonitor.c:  Fix some bad conditional
	  compilation probably introduced on 2013-9-9 (2013-9-23).
	* apps/system/stackmonitor:  Add a daemon that can be used to
	  monitor stack usage by all threads (2013-9-24).
	* system/usbmsc:  Move examples/usbmsc to system/usbmsc (2013-9-25).
	* system/cdcacm:  Move examples/cdcacm to system/cdcacm (2013-9-25).
	* system/composite:  Move examples/composite to system/composite
	  (2013-9-25).
	* apps/nshlib and apps/readline:  Numerous changes to get NSH
	  working with no file system.  Basically this suppresses I/O
	  redirection and replaces file I/O with calls to low-level
	  console read/write functions.  Suggested by Alan Carvalho de Assis
	  in a somewhat different form. (2013-9-30).
